# bss-web-file-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt
.circleci/: config.yml
app/: config.py  main.py
app/models/: video.py
app/routers/: member.py  video.py
app/services/: member.py  video.py
scripts/: convert-image.sh  convert-poster.sh  convert-video.sh
src/: security.py  settings.py
src/bss_web_file_server/: config.py  main.py  settings.py
src/bss_web_file_server/models/: member.py  video.py
src/bss_web_file_server/routers/: health.py  member.py  video.py
src/bss_web_file_server/services/: image.py  member.py  video.py
src/routers/: member.py  video.py
test/bss_web_file_server/models/: test_member.py  test_video.py
tests/: test_main.py  test_security.py  test_settings.py
tests-int/: test_health.py
tests/bss/web/routers/: member.py
tests/bss_web_file_server/: test_main.py
tests/bss_web_file_server/models/: test_member.py  test_video.py
tests/bss_web_file_server/routers/: test_health.py  test_member.py  test_video.py
tests/bss_web_file_server/services/: test_image.py  test_member.py
tests/models/: test_member.py  test_video.py
tests/routers/: test_health.py  test_member.py  test_video.py
tests/services/: test_image.py  test_member.py  test_video.py
