[tool.poetry]
name = "bss-web-file-server"
description = "BSS file server API"
authors = ["Bence Csik <bence@csik.dev>"]
version = "1.0.0"
packages = [{include = "bss_web_file_server", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = {version="0.114.0", extras=["all"]}
pillow = "10.4.0"
pillow-avif-plugin = "1.4.6"
python = "^3.12"
# used for UploadFile
python-multipart = "0.0.10"
requests = "2.32.3"
uvicorn = {version = "0.30.6", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
isort = "5.13.2"
mypy = "1.11.2"
pylint = "3.3.0"
pre-commit = "3.8.0"
types-Pillow = "10.2.0.20240822"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
testcontainers = "4.8.1"

[tool.isort]
profile = "black"

[tool.mypy]
packages = "src"
