[tool.poetry]
name = "bss-web-file-server"
description = "BSS file server API"
authors = ["Bence Csik <bence@csik.dev>"]
version = "1.0.0"
packages = [{include = "bss_web_file_server", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = {version="0.115.2", extras=["all"]}
pillow = "11.3.0"
pillow-avif-plugin = "1.4.6"
python = "^3.12"
# used for UploadFile
python-multipart = "0.0.19"
requests = "2.32.5"
uvicorn = {version = "0.40.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
isort = "5.13.2"
mypy = "1.19.1"
pylint = "3.3.9"
pre-commit = "3.8.0"
types-Pillow = "10.2.0.20240822"

[tool.poetry.group.test.dependencies]
pytest = "8.4.2"
pytest-cov = "5.0.0"
pytest-mock = "3.15.1"
testcontainers = "4.14.0"

[tool.isort]
profile = "black"

[tool.mypy]
packages = "src"
